第17章 标准库特殊设施

--- a/第17章 标准库特殊设施.md
+++ b/第17章 标准库特殊设施.md
@@ -84,14 +84,229 @@ bitset<32> bitvec6(str, str.size() - 4); // 使用最后四个字符（字符数
 分析：
 
 1. `bitvec5` 用 `str` 中从 `str[5]` 开始的长度为 `4` 的子串进行初始化。与往常一样，子串的最右字符表示最低位。因此，`bitvec5` 中第 `3` 位到第 `0` 位被设置为 `1100`，剩余位被设置为 `0`。
-   
+
 2. 传递给 `bitvec6` 的初始值是一个 `string` 和一个开始位置，因此 `bitvec6` 用 `str` 中倒数第四个字符开始的子串进行初始化。`bitvec6` 中剩余二进制位被初始化为 `0`。
 
 ![从一个string初始化bitset]()
 
+**练习 17.9：解释下列每个 `bitset` 对象所包含的位模式：**
 
+(a) `bitset<64> bitvec(32);`
+
+`bitvec` 为 `32` 位，第 `5` 位 为 `1`，剩余位为 `0`。// 疑问：这里不确定是 `32` 位 还是 `64` 位
+
+(b) `bitset<32> bv(1010101);`
+
+`bv` 为 32 位，0、2、4、6 这 4 位为 `1`，剩余位为 `0`。
+
+(c) `string bstr; cin >> bstr; bitset<8>bv(bstr);`
+
+`bv` 为 `8` 位，用 `bstr` 来对其进行初始化。若读入的字符串不是单纯的二进制字符串，程序会抛出 `invalid_argument` 异常。
 
 ### 17.2.2 bitset操作
+
+**表17.3：`bitset`操作**
+
+
+
+| `b.any()`                | `b` 中是否存在置位的二进制位                                 |
+| ------------------------ | ------------------------------------------------------------ |
+| `b.all()`                | `b` 中所有位都置位 了吗                                      |
+| `b.none()`               | `b` 中不存在置位的二进制位吗                                 |
+| `b.count()`              | `b` 中置位的位数                                             |
+| `b.size()`               | `b` 中置位的位数                                             |
+| `b.size()`               | 一个 `constexpr` 函数，返回 `b` 中的位数                     |
+| `b.test(pos)`            | 若 `pos` 位置的位是置位的，则返回 `true`，否则返回 `false`   |
+| `b.set(pos, v)`          | 将位置 `pos` 处的位设置为 `bool` 值 `v`。`v` 默认为 `true`。 |
+| `b.set()`                | 如果未传递实参，则将 `b` 中所有位置位                        |
+| `b.reset(pos)`           | 将位置 `pos` 处的位复位或将 b 中所有位复位                   |
+| `b.reset()`              |                                                              |
+| `b.flip(pos)`            | 改变位置 `pos` 处的位的状态或改变 `b` 中每一位的状态         |
+| `b[pos]`                 | 访问 `b` 中位置 `pos` 处的位；如果 `b` 是 `const` 的，则当该位置位时 `b[pos]` 返回一个 `bool` 值 `true`，否则返回 `false` |
+| `b.to_ulong()`           | 返回一个 `unsigned long` 或一个 `unsigned long long` 值，其位模式与 `b` 相同。如果 `b` 中位模式不能放入指定的结果类型，则抛出一个 `overflow_error` 异常 |
+| `b.to_ullong()`          |                                                              |
+| `b.to_string(zero, one)` | 返回一个 `string`，表示 `b` 中的位模式。`zero` 和 `one` 的默认值分别为 `0` 和 1，用来表示 `b` 中的 `0` 和 `1` |
+| `os << b`                | 将 `b` 中二进制位打印为字符 `1` 或 `0`，打印到流 `os`        |
+| `is >> b`                | 从 `is` 读取字符存入 `b`。当下一个字符不是 `1` 或 `0` 时，或是已经读入 `b.size()` 个位时，读取过程停止 |
+
+
+
+```c++
+bitset<32> bitvec(1U);				// 32 位；低位为 1，剩余位为 0
+bool is_set = bitvec.any();			// true，因为有1位置位
+bool is_not_set = bitvec.none();	// false，因为有1位置位
+bool all_set = bitvec.all();		// false，因为只有1位置位
+size_t onBits = bitvec.count();		// 返回 1
+size_t sz = bitvec.size();			// 返回 32
+bitvec.flip();		// 翻转 bitvec 中的所有位
+bitvec.reset();		// 将所有位复位
+bitvec.set();		// 将所有位置位
+```
+
+- 当 `bitset` 对象的一个或多个位置位（即，等于 1）时，操作 `any` 返回 `true`。当所有位置位时，操作 `all` 返回 `true`。
+- 当所有位复位时，`none` 返回 `true`。
+- 操作 `count` 和 `size` 返回 `size_t` 类型的值，分别表示对象中置位的位数或总位数。函数 `size` 是一个 `constexpr` 函数
+
+
+
+成员 `flip`, `set`, `reset` 及 `test` 允许我们读写指定位置的位：
+
+```c++
+bitvec.flip(0);					// 翻转第一位
+bitvec.set(bitvec.size() - 1);	// 置位最后一位
+bitvec.set(0, 0);	// 复位第一位
+bitvec.reset(i);	// 复位第 i 位
+bitvec.test(0);		// 返回 false，因为第一位是复位的
+```
+
+
+
+下标运算符对 `const` 属性进行了重载。`const` 版本的下标运算符在指定位置位时返回 `true`，否则返回 `false`。非 `const` 版本返回 `bitset` 定义的一个特殊类型，它允许我们操纵指定位的值：
+
+```c++
+bitvec[0] = 0;			// 将第一位复位
+bitvec[31] = bitvec[0];	// 将最后一位设置为与第一位一样
+bitvec[0].flip();		// 翻转第一位
+~bitvec[0];				// 等价操作，也是翻转第一位
+bool b = bitvec[0];		// 将 bitvec[0] 的值转换为 bool 类型
+```
+
+#### 提取 `bitset` 的值
+
+没看懂 P644
+
+#### `bitset` 的 IO 运算符
+
+输入运算符从一个输入流读取字符，保存到一个临时的 `string` 对象中。
+直到读取的字符数达到对应 `bitset` 的大小时，
+或是遇到不是 `1` 或 `0` 的字符时，
+或是遇到文件尾或输入错误时，读取过程才停止。
+
+随即用临时 `string` 对象来初始化 `bitset`。
+如果读取的字符数小于 `bitset` 的大小，则与往常一样，高位将被置位 `0`。
+
+```cpp
+// 输出运算符打印一个 bitset 对象的位模式
+bitset<16> bits;
+cin >> bits; // 从 cin 读取最多 16 个 0 或 1
+cout << "bits: " << bits << endl; // 打印刚刚读取的内容
+```
+
+#### 使用 `bitset`
+
+为了说明如何使用 bitset，用 bitset 代替 unsigned long 表示 30 个学生的测验结果——“通过/失败”：
+
+```cpp
+bool status;
+// 使用位运算符的版本
+unsigned long quizA = 0;    // 此值被当做位集合使用
+quizA |= 1UL << 27;         // 指出第 27 个学生通过了测验
+status = quizA & (1UL << 27); // 检查第 27 个学生是否ton过了测验
+quizA &= ~(1UL << 27);      // 第 27 个学生未通过测验
+
+// 使用标准库类 bitset 完成等价的工作
+bitset<30> quizB;           // 每个学生分配一位，所有为都被初始化为 0
+quizB.set(27);              // 指出第 27 个学生通过了测验
+status = quizB[27];         // 检查第 27 个学生是否通过了测验
+quizB.reset(27);            // 第 27 个学生未通过测验
+```
+
+**练习17.10：使用序列 1、2、3、5、8、13、21 初始化一个 bitset，将这些位置置位。对另一个 bitset 进行默认初始化，并编写一小段程序将其恰当的位置位。**
+
+```cpp
+/*练习17.10：使用序列 1、2、3、5、8、13、21 初始化一个 bitset，将这些位置置位。
+对另一个 bitset 进行默认初始化，并编写一小段程序将其恰当的位置位。*/
+
+#include <iostream>
+#include <bitset>
+
+using namespace std;
+
+int main(int argc, char **argv)
+{
+    unsigned bp = 2 | (1 << 2) | (1 << 5) | (1 << 8) | (1 << 13) | (1 << 21);
+    bitset<32> bv(bp);
+    cout << bv << endl;
+
+    bitset<32> bv1;
+    bv1.set(1); bv1.set(2); bv1.set(3); bv1.set(5);
+    bv1.set(8); bv1.set(13); bv1.set(21);
+    cout << bv1 << endl;
+
+    return 0;
+}
+```
+
+**练习17.11：定义一个数据结构，包含一个整型对象，记录一个包含10个问题的真假测验的解答。如果测验包含100道题，你需要对数据结构做出什么改变（如果需要的话）。**
+
+【出题思路】 本题练习 `bitset` 的定义和使用。
+
+【解答】 如果使用整数保存测验解答，那么对于 `10` 个问题的测验，只需一个短整型对象即可。
+
+如果改为 `100` 道题，则需 `4` 个 `32` 位整数或是 `2` 个 `64` 位整数。而且修改的并不仅仅是数据结构，所有对整型数进行操作来修改解答和评分的代码都要相应进行修改，工作量很大。
+
+采用 `bitset` 则有很明显的优势，当题目数改变时，我们只需改变 `bitset` 的规模，而操作 `bitset` 来完成改答案、评分的代码则只需进行很小的修改。
+
+最佳的方式是定义一个**类模板**，它有一个模板参数表示**题目数**，有一个 `bitset` 成员保存解答，然后定义一些成员函数来完成改答案、评分等操作。当题目数发生变化，我们只需实例化一个新版本即可，其他代码均无须改动。
+
+**练习17.12：使用前一题中的数据结构，编写一个函数，它接受一个问题编号和一个表示真／假解答的值，函数根据这两个参数更新测验的解答。**
+
+**练习17.13：编写一个整型对象．包含真／假测验的正确答案．使用它来为前两题中的数据结构生成测验成绩。**
+
+【出题思路】本题练习 `bitset` 的定义和使用。
+
+```cpp
+/**
+练习17.12：使用前一题中的数据结构，编写一个函数，它接受一个问题编号和一个表示真／假解答的值，函数根据这两个参数更新测验的解答。
+
+练习17.13：编写一个整型对象．包含真／假测验的正确答案．使用它来为前两题中的数据结构生成测验成绩。
+*/
+
+#include <iostream>
+#include <bitset>
+
+using namespace std;
+
+template <size_t N>
+class exam {
+public:
+    exam() : s() {}
+    size_t get_size() { return N; }
+    void set_solution(size_t n, bool b) { s.set(n, b); }
+    bitset<N> get_solution() const { return s; }
+    size_t score (const bitset<N> &a);
+private:
+    bitset<N> s;
+};
+
+template <size_t N>
+size_t exam<N>::score(const bitset<N> &a)
+{
+    size_t ret = 0;
+
+    for (size_t i = 0; i < N; i++)
+        if (s[i] == a[i])
+            ret++;
+    return ret;
+}
+
+int main (int argc, char **argv)
+{
+    exam<80> e;
+    e.set_solution(0, 1);
+    e.set_solution(79, 1);
+    cout << e.get_solution() << endl;
+
+    bitset<80> a;
+    cout << e.get_size() << " problems, you've got " << e.score(a) << " points." << endl;
+    
+    return 0;
+}
+/* Output:
+10000000000000000000000000000000000000000000000000000000000000000000000000000001
+80 problems, you've got 78 points.
+*/
+```
 
 ## 17.3 正则表达式
 
