--- a/第17章 标准库特殊设施/17.2.1 定义和初始化bitset/练习17_9.md
+++ b/第17章 标准库特殊设施/17.2.1 定义和初始化bitset/练习17_9.md
@@ -1,13 +1,13 @@
-**练习17.9：解释下列每个`bitset`对象所包含的位模式：**
+**练习 17.9：解释下列每个 `bitset` 对象所包含的位模式：**
 
-```cpp
-(a) bitset<64> bitvec(32);
-(b) bitset<32> bv(1010101);
-(c) string bstr; cin >> bstr; bitset<8>bv(bstr);
-```
+(a) `bitset<64> bitvec(32);`
 
-(a) `bitvec` 为 32 位，第 5 位为 `1`，剩余位为 `0`。
+`bitvec` 为 `32` 位，第 `5` 位 为 `1`，剩余位为 `0`。// 疑问：这里不确定是 `32` 位 还是 `64` 位
 
-(b) `bv` 为 32 位，0、2、4、6 这4位为 `1`，剩余位为 `0`。
+(b) `bitset<32> bv(1010101);`
 
-(c) `bv` 为 `8` 位，用 bstr 来对其进行初始化。
+`bv` 为 32 位，0、2、4、6 这 4 位为 `1`，剩余位为 `0`。
+
+(c) `string bstr; cin >> bstr; bitset<8>bv(bstr);`
+
+`bv` 为 `8` 位，用 `bstr` 来对其进行初始化。若读入的字符串不是单纯的二进制字符串，程序会抛出 `invalid_argument` 异常。
