--- a/第17章 标准库特殊设施.md
+++ b/第17章 标准库特殊设施.md
@@ -87,7 +87,7 @@ bitset<32> bitvec6(str, str.size() - 4); // 使用最后四个字符（字符数
 
 2. 传递给 `bitvec6` 的初始值是一个 `string` 和一个开始位置，因此 `bitvec6` 用 `str` 中倒数第四个字符开始的子串进行初始化。`bitvec6` 中剩余二进制位被初始化为 `0`。
 
-![从一个string初始化bitset]()
+![从一个string初始化bitset](https://raw.githubusercontent.com/KimmiGYH/CPP_Primer_Notes_Public/master/%E7%AC%AC17%E7%AB%A0%20%E6%A0%87%E5%87%86%E5%BA%93%E7%89%B9%E6%AE%8A%E8%AE%BE%E6%96%BD/%E4%BB%8E%E4%B8%80%E4%B8%AAstring%E5%88%9D%E5%A7%8B%E5%8C%96bitset.png)
 
 **练习 17.9：解释下列每个 `bitset` 对象所包含的位模式：**
 
