C_第15章 位操作

--- a/C_第15章 位操作.md
+++ b/C_第15章 位操作.md
@@ -391,7 +391,7 @@ stonk <<= 2;        /* 把 sotnk 的值改为 4 */
 
 ```cpp
 int sweet = 16;
-itn ooosw;
+int ooosw;
 
 ooosw = sweet >> 3; // ooosw = 2，sweet 的值仍然为 16
 sweet >>= 3;        // sweet 的值为 2
