--- a/第3章 字符串、向量和数组.md
+++ b/第3章 字符串、向量和数组.md
@@ -107,7 +107,12 @@
 `string s5 = "hiya";`    // 拷贝初始化
 `string s6("hiya");`     // 直接初始化
 `string s7(10, 'c');`    // 直接初始化，s7 的内容是 ccccccc  √ 可读性更好
+
+对于用多个值进行初始化的情况，非要用拷贝初始化的方式来处理也不是不可以，不过需要显式地创建一个（临时）对象用于拷贝
+
 `string s8 = string(10, 'c');`  // 拷贝初始化，s8 的内容是 cccccccc
+
+s8 的初始值是 `string(10, 'c')`，它实际上行是用数字 10 和 字符 c 两个参数创建出来的一个 string 对象，然后这个 string 对象又拷贝给了 s8。
 
 注：s8 的拷贝初始化本质上等价于下面的两条语句：
 string temp(10, 'c');   // temp 的内容是 cccccccc
