--- a/第11章 关联容器.md
+++ b/第11章 关联容器.md
@@ -24,7 +24,7 @@
 
 允许重复关键字的容器的名字中都包含单词`multi`；
 不保持关键字按顺序存储的容器的名字都以单词`unordered`开头。
-因此一个`unordered_multi_set`是一个允许重复关键字，元素无序保存的集合，
+因此一个`unordered_multiset`是一个允许重复关键字，元素无序保存的集合，
 而一个`set`则是一个要求**不重复**关键字，**有序**存储的集合。
 
 无序容器使用哈希函数来组织元素。
