--- a/第9章 顺序容器.md
+++ b/第9章 顺序容器.md
@@ -1,65 +1,65 @@
 <!-- TOC -->
 
 - [第9章 顺序容器 (sequential container)](#第9章-顺序容器-sequential-container)
-  - [9.1 顺序容器概述](#91-顺序容器概述)
-    - [确定使用哪种顺序容器](#确定使用哪种顺序容器)
-  - [9.2 容器库概览](#92-容器库概览)
-    - [对容器可以保存的元素类型的限制](#对容器可以保存的元素类型的限制)
-      - [表9.2：容器操作](#表92容器操作)
-    - [9.2.1 迭代器](#921-迭代器)
-      - [迭代器范围](#迭代器范围)
-      - [使用左闭合范围蕴含的变成假定](#使用左闭合范围蕴含的变成假定)
-    - [9.2.2 容器类型成员](#922-容器类型成员)
-    - [9.2.3 `begin`和`end`成员](#923-begin和end成员)
-    - [9.2.4 容器定义和初始化](#924-容器定义和初始化)
-      - [将一个容器初始化为另一个容器的拷贝](#将一个容器初始化为另一个容器的拷贝)
-      - [列表初始化](#列表初始化)
-      - [与顺序容器大小相关的构造函数](#与顺序容器大小相关的构造函数)
-      - [标准库`array`具有固定大小](#标准库array具有固定大小)
-    - [9.2.5 赋值和swap](#925-赋值和swap)
-      - [使用 `assign`（仅顺序容器）](#使用-assign仅顺序容器)
-      - [使用 `swap`](#使用-swap)
-    - [9.2.6 容器大小操作](#926-容器大小操作)
-    - [9.2.7 关系运算符](#927-关系运算符)
-      - [容器的关系运算符使用元素的关系运算符完成比较](#容器的关系运算符使用元素的关系运算符完成比较)
-  - [9.3 顺序容器操作](#93-顺序容器操作)
-    - [9.3.1 向顺序容器添加元素](#931-向顺序容器添加元素)
-      - [使用`push_back`](#使用push_back)
-      - [使用`push_front`](#使用push_front)
-      - [在容器中的特定位置添加元素](#在容器中的特定位置添加元素)
-      - [插入范围内元素](#插入范围内元素)
-      - [使用`insert`的返回值](#使用insert的返回值)
-      - [使用`emplace`操作](#使用emplace操作)
-    - [9.3.2 访问元素](#932-访问元素)
-      - [访问成员函数返回的是引用](#访问成员函数返回的是引用)
-      - [下标操作和安全的随机访问](#下标操作和安全的随机访问)
-    - [9.3.3 删除元素](#933-删除元素)
-      - [`pop_front`和`pop_back`成员函数](#pop_front和pop_back成员函数)
-      - [从容器内部删除一个元素](#从容器内部删除一个元素)
-      - [删除多个元素](#删除多个元素)
-    - [9.3.4 特殊的`forward_list`操作](#934-特殊的forward_list操作)
-    - [9.3.5 改变容器大小](#935-改变容器大小)
-    - [9.3.6 容器操作可能使迭代器失效](#936-容器操作可能使迭代器失效)
-      - [编写改变容器的循环程序](#编写改变容器的循环程序)
-      - [不要保存`end`返回的迭代器](#不要保存end返回的迭代器)
-  - [9.4 vector对象是如何增长的](#94-vector对象是如何增长的)
-    - [管理容量的成员函数](#管理容量的成员函数)
-    - [`capacity`和`size`](#capacity和size)
-  - [9.5 额外的string操作](#95-额外的string操作)
-    - [9.5.1 构造string的其他方法](#951-构造string的其他方法)
-      - [`substr`操作](#substr操作)
-    - [9.5.2 改变string的其他方法](#952-改变string的其他方法)
-      - [`append`和`replace`函数](#append和replace函数)
-      - [改变`string`的多种重载函数](#改变string的多种重载函数)
-    - [9.5.3 string搜索操作](#953-string搜索操作)
-      - [指定在哪里开始搜索](#指定在哪里开始搜索)
-      - [逆向搜素](#逆向搜素)
-    - [9.5.4 compare函数](#954-compare函数)
-    - [9.5.5 数值转换](#955-数值转换)
-  - [9.6 容器适配器 (adapter)](#96-容器适配器-adapter)
-    - [定义一个适配器](#定义一个适配器)
-    - [栈适配器](#栈适配器)
-    - [队列适配器](#队列适配器)
+    - [9.1 顺序容器概述](#91-顺序容器概述)
+        - [确定使用哪种顺序容器](#确定使用哪种顺序容器)
+    - [9.2 容器库概览](#92-容器库概览)
+        - [对容器可以保存的元素类型的限制](#对容器可以保存的元素类型的限制)
+            - [表9.2：容器操作](#表92容器操作)
+        - [9.2.1 迭代器](#921-迭代器)
+            - [迭代器范围](#迭代器范围)
+            - [使用左闭合范围蕴含的变成假定](#使用左闭合范围蕴含的变成假定)
+        - [9.2.2 容器类型成员](#922-容器类型成员)
+        - [9.2.3 `begin`和`end`成员](#923-begin和end成员)
+        - [9.2.4 容器定义和初始化](#924-容器定义和初始化)
+            - [将一个容器初始化为另一个容器的拷贝](#将一个容器初始化为另一个容器的拷贝)
+            - [列表初始化](#列表初始化)
+            - [与顺序容器大小相关的构造函数](#与顺序容器大小相关的构造函数)
+            - [标准库`array`具有固定大小](#标准库array具有固定大小)
+        - [9.2.5 赋值和swap](#925-赋值和swap)
+            - [使用 `assign`（仅顺序容器）](#使用-assign仅顺序容器)
+            - [使用 `swap`](#使用-swap)
+        - [9.2.6 容器大小操作](#926-容器大小操作)
+        - [9.2.7 关系运算符](#927-关系运算符)
+            - [容器的关系运算符使用元素的关系运算符完成比较](#容器的关系运算符使用元素的关系运算符完成比较)
+    - [9.3 顺序容器操作](#93-顺序容器操作)
+        - [9.3.1 向顺序容器添加元素](#931-向顺序容器添加元素)
+            - [使用`push_back`](#使用push_back)
+            - [使用`push_front`](#使用push_front)
+            - [在容器中的特定位置添加元素](#在容器中的特定位置添加元素)
+            - [插入范围内元素](#插入范围内元素)
+            - [使用`insert`的返回值](#使用insert的返回值)
+            - [使用`emplace`操作](#使用emplace操作)
+        - [9.3.2 访问元素](#932-访问元素)
+            - [访问成员函数返回的是引用](#访问成员函数返回的是引用)
+            - [下标操作和安全的随机访问](#下标操作和安全的随机访问)
+        - [9.3.3 删除元素](#933-删除元素)
+            - [`pop_front`和`pop_back`成员函数](#pop_front和pop_back成员函数)
+            - [从容器内部删除一个元素](#从容器内部删除一个元素)
+            - [删除多个元素](#删除多个元素)
+        - [9.3.4 特殊的`forward_list`操作](#934-特殊的forward_list操作)
+        - [9.3.5 改变容器大小](#935-改变容器大小)
+        - [9.3.6 容器操作可能使迭代器失效](#936-容器操作可能使迭代器失效)
+            - [编写改变容器的循环程序](#编写改变容器的循环程序)
+            - [不要保存`end`返回的迭代器](#不要保存end返回的迭代器)
+    - [9.4 vector对象是如何增长的 (倍增)](#94-vector对象是如何增长的-倍增)
+        - [管理容量的成员函数](#管理容量的成员函数)
+        - [`capacity`和`size`](#capacity和size)
+    - [9.5 额外的string操作](#95-额外的string操作)
+        - [9.5.1 构造string的其他方法](#951-构造string的其他方法)
+            - [`substr`操作](#substr操作)
+        - [9.5.2 改变string的其他方法](#952-改变string的其他方法)
+            - [`append`和`replace`函数](#append和replace函数)
+            - [改变`string`的多种重载函数](#改变string的多种重载函数)
+        - [9.5.3 string搜索操作](#953-string搜索操作)
+            - [指定在哪里开始搜索](#指定在哪里开始搜索)
+            - [逆向搜素](#逆向搜素)
+        - [9.5.4 compare函数](#954-compare函数)
+        - [9.5.5 数值转换](#955-数值转换)
+    - [9.6 容器适配器 (adapter)](#96-容器适配器-adapter)
+        - [定义一个适配器](#定义一个适配器)
+        - [栈适配器](#栈适配器)
+        - [队列适配器](#队列适配器)
 
 <!-- /TOC -->
 
@@ -1532,7 +1532,7 @@ while (begin != v.end()) {
 }
 ```
 
-## 9.4 vector对象是如何增长的
+## 9.4 vector对象是如何增长的 (倍增)
 
 假定容器中元素是连续存储的，且容器的大小是可变的，考虑向`vector`或`string`中添加元素会发生什么：
 如果没有空间容纳新元素，容器不可能简单地将它添加到内存中其他位置——因为元素必须连续存储。容器必须分配新的内存空间来保存己有元素和新元素，将已有元素从旧位置移动到新空间中，然后添加新元素，释放旧存储空间。如果我们每添加一个新元素，`vector`就执行一次这样的内存分配和释放操作，性能会慢到不可接受。
@@ -1575,7 +1575,7 @@ svec.resize(svec.size() + svec.size()/2);
 
 接下来，`resize`将向`svec`末尾添加当前字符串数量一半那么多的新字符串， 它们的值都是空串。若空间不够，会分配足够容纳这些新字符串的内存空间。
 
-***练习9.35：解释一个`vector`的`capacity`和`size`有何区别。**
+**练习9.35：解释一个`vector`的`capacity`和`size`有何区别。**
 
 【解答】
 
@@ -1598,20 +1598,320 @@ svec.resize(svec.size() + svec.size()/2);
 
 ## 9.5 额外的string操作
 
-未完待续！！！
-
 - `string`类和C风格字符数组之间的相互转换
 - 用下标代替迭代器的版本
 
 ### 9.5.1 构造string的其他方法
 
+| 表 9.11：                        | 构造 `string` 的其他方法                                     |
+| -------------------------------- | ------------------------------------------------------------ |
+| `n`, `len` 和 `pos2`都是无符号值 |                                                              |
+| `string s(cp, n)`                | `s` 是 `cp` 指向的数组中前 `n` 个字符的拷贝。此数组至少应该包含 `n` 个字符 |
+| `string s(s2, pos2)`             | `s` 是 `string s2` 从下标 `pos2` 开始的字符的拷贝。若 `pos2 > s2.size()`，构造函数的行为未定义 |
+| `string s(s2, pos2, len2)`       | `s` 是 `string s2` 从下标 `pos2` 开始 `len2` 个字符的拷贝。若 `pos2 > s2.size()`，构造函数的行为未定义。不管 `len2`的值是多少，构造函数至多拷贝 `s2.size() - pos2` 个字符 |
+
+```cpp
+const char* cp = "Hello World!!!"; // 以空字符结束的数组
+char noNull[] = {'H', 'i'}; // 不是以空字符结束
+string s1(cp);          //拷贝 cp 中的字符直到遇到空字符；s1 == "Hello Wolrd!!!"
+string s2(noNull, 2);   //从 noNull 拷贝两个字符；s2 == "Hi"
+string s3(noNull);      // 未定义：noNUll 不是以空字符结束
+string s4(cp + 6, 5);   // 从 cp[6] 开始拷贝 5 个字符；s4 == "Wolrd"
+string s5(s1, 6, 5);    // 从 s1[6] 开始拷贝 5 个字符；s5 == "World"
+string s6(s1, 6);       // 从 s1[6] 开始拷贝，直至 s1 末尾；s6 == "World!!!"
+string s7(s1, 6, 20);   // 正确，只拷贝到 s1 末尾；s7 == "World!!!"
+string s8(s1, 16);      // 抛出一个 out_of_range 异常
+```
+
+总结：
+
+1. 通常我们从一个 `const char*` 创建 `string` 时，指针指向的数组必须以**空字符**结尾，拷贝操作遇到空字符时停止。(s7的情况)
+2. 如果我们还传递给构造函数一个**计数值**，数组就不必以空字符结尾。(s2的情况)
+3. 如果我们未传递**计数值**也未以**空字符**结尾，或者给定**计数值大于数组大小**，则构造函数的行为是未定义的
+4. 当从一个 `string` 拷贝字符时，我们可以提供一个可选的开始位置和一个计数值。开始位置必须小于或等于给定的 `string` 的大小。如果位置大于 `size`，则构造函数抛出一个 `out_of_range` 异常。(s8的情况)
+5. 当从一个 `string` 拷贝字符时，如果我们传递了一个计数值，则从给定位置开始拷贝这么多个字符。不管我们要求考呗多少个字符，标准库最多拷贝到 `string` 结尾，不会更多。(s7的情况)
+
 #### `substr`操作
+
+- 可以传递给 `substr` 一个可选的开始位置和计数值。
+- `s.substr(pos, count)` 返回一个 `string`，包含 `s` 中从 `pos` 开始的 `count` 个字符的拷贝。
+- `pos` 默认值为 `0`；`count` 的默认值为 `s.size() - pos`，即拷贝从 `pos` 开始的所有字符。
+- 返回含子串 `[pos, pos+count)` 的 string。
+
+```cpp
+string s("hello world");
+string s2 = s.substr(0, 5); // s2 = hello
+string s3 = s.substr(6);    // s3 = world
+string s4 = s.substr(6, 11);// s3 = world
+string s5 = s.substr(12);   // 抛出一个 out_of_range 异常
+```
+
+**练习9.41：编写程序，从一个 `vector<char>` 初始化一个 `string`。**
+
+解答：`vector` 提供了 `data` 成员函数，返回其内存空间的首地址。将此返回值作为 `string` 的构造函数的第一个参数，将 `vector` 的 `size` 返回值作为第二个参数，即可获取 `vector<char>` 中的数据，将其看做一个字符数组来初始化 `string`。
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+
+int main()
+{
+    vector<char> vc = {'H', 'e', 'l', 'l', 'o'};
+    string s(vc.data(), vc.size());
+    cout << s << endl;
+
+    return 0;
+}
+```
+
+**练习 9.42：假定你希望每次读取一个字符存入一个 `string` 中而且知道最少需要读取 100 个字符，你应该如何提高程序的性能？**
+
+解答：考察高效地处理动态增长的 `string`。由于知道至少读取 $100$ 个字符，因此可以用 `reserve` 先为 `string` 分配 $100$ 个字符的空间，然后逐个读取字符，用 `push_back` 添加到 `string` 末尾。
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+
+void input_string(string &s)
+{
+    s.reserve(100);
+    char c;
+    while (cin >> c)
+        s.push_back(c);
+}
+
+int main()
+{
+    string s;
+    input_string(s);
+    cout << s << endl;
+
+    return 0;
+}
+```
 
 ### 9.5.2 改变string的其他方法
 
+`string` 还支持 `assign`、`insert` 和 `erase`操作。
+
+- 除了接受迭代器的 `insert` 和 `erase` 版本外，`string` 还提供了接受下标的版本。下标指出了开始删除的位置，或是 `insert` 到给定值之前的位置：
+
+```cpp
+s.insert(s.size(), 5, '!'); //在 s 末尾插入 5 个感叹号
+s.erase(s.sizes() - 5, 5);  //从 s 删除最后 5 个字符
+```
+
+- 标准库 `string` 类型还提供了接受 C风格字符数组的 `insert` 和 `assign` 版本。我们可以将以空字符结尾的字符数组 `insert` 到或 `assign`给一个 `string`：
+
+```cpp
+const char* cp = "Stately, plump Buck";
+s.assign(cp, 7);            // s == "Stately"
+s.insert(s.size(), cp + 7); // s == "Stately, plump Buck"
+```
+
+我们通过调用 `assign` 替换 `s` 的内容。我们赋予 `s` 的是从 `cp` 指向的地址开始的 `7` 个字符。要求赋值的字符数必须小于或等于 `cp` 指向的数组中的字符数（不包括结尾的空字符）。
+
+接下来在 `s` 上调用 `insert`，意图是将字符插入到 `s[size()]` 处（不存在的）元素之前的位置。在此例中，我们将 `cp` 开始的 `7` 个字符（至多到结尾空字符之前）拷贝到 `s` 中。
+
+- 我们也可以指定将来自其他 `string` 或子字符串的字符插入到当前 `string` 中或赋予当前 `string`：
+
+```cpp
+string s = "some string", s2 = "some other string";
+s.insert(0, s2);    //在 s 中位置 0 之前插入 s2 的拷贝
+s.insert(0, s2, 0, s2.size());  //在 s[0] 之前插入 s2 中 s2[0] 开始的 s2.size() 个字符
+```
+
 #### `append`和`replace`函数
 
+- `append` 是在 `string` 末尾进行插入操作的一种简写形式，总是替换 `string` 中的所有内容：
+
+```cpp
+string s("C++ Primer"), s2 = s; //将 s 和 s2 初始化为 "C++ Primer"
+s.insert(s.size(), " 4th Ed."); // s == "C++ Primer 4th Ed."
+s2.append(" 4th Ed.");  //等价方法：将" 4th Ed."追加到 s2；s == s2
+```
+
+- `replace` 操作是调用 `erase` 和 `insert` 的一种简写形式：
+
+```cpp
+// 将 "4th" 替换为 "5th" 的等价方法
+s.erase(11, 3);     // s == "C++ Primer Ed."
+s.insert(11, "5th");// s == "C++ Primer 5th Ed."
+// 从位置 11 开始，删除 3 个字符并插入 "5th"
+s2.replace(11, 3, "5th");   //等价方法： s == s2
+// 可以插入一个更长或更短的string
+s.replace(11, 3, "Fifth");  // s == "C++ Primer Fifth Ed."
+```
+
 #### 改变`string`的多种重载函数
+
+**练习9.43：编写函数，接受三个 string 参数 `s`、`oldVal` 和 `newVal`。使用迭代器及 `insert` 和 `erase` 函数将 `s` 中所有 `oldVal` 替换为 `newVal`。测试你的成废墟，用它替换通用的简写形式，如，将 "tho" 替换为 "though"，将 "thru" 替换为 "through"。**
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+
+void replace_string(string& s, const string& oldVal, const string& newVal)
+{
+    int len = oldVal.size();
+    if (!len) return;   // 要查找的字符串为空
+    auto iter = s.begin();
+    while (iter <= s.end()-1)
+    {
+        auto iter1 = iter;
+        auto iter2 = oldVal.begin();
+        // s 中 iter 开始的子串必须每个字符都与 oldVal 相同
+        while (iter2 != oldVal.end() && *iter1 == *iter2) {
+            iter1++;
+            iter2++;
+        }
+        if (iter2 == oldVal.end()) {    // oldVal耗尽——字符串相等
+            iter = s.erase(iter, iter1);// 删除 s 中与 oldVal 相等的部分
+            if (newVal.size()) {        // newVal不为空时
+                iter2 = newVal.end();   // 由后至前逐个顺次将newVal中的字符插入到s中
+                do {
+                    iter2--;
+                    iter = s.insert(iter, *iter2);
+                } while (iter2 > newVal.begin());
+            }
+            iter += newVal.size();      // 迭代器移动到新插入内容之后
+        } 
+        iter++;
+    }    
+}
+
+int main()
+{
+    string s = "tho thru tho!";
+
+    replace_string(s, "thru", "through");
+    cout << s << endl; // "tho through tho!"
+
+    replace_string(s, "tho", "though");
+    cout << s << endl; // "though through though!"
+
+    replace_string(s, "through", "");
+    cout << s << endl; // "though  though!"
+
+    return 0;
+}
+```
+
+**练习9.44：重写上一题的函数，这次使用一个下标和 `replace`。**
+
+由于可以使用下标和 `replace`，因此可以更为简单地实现上一题的目标。
+通过 `find` 成员函数（只支持下标参数）即可找到 `s` 中与 `oldVal` 相同的子串，接着用 `replace` 即可将找到的子串替换为新内容。
+
+可以看到，使用下标而不是迭代器，通常可以更简单地实现字符串操作。
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+
+void replace_string(string& s, const string& oldVal, const string& newVal)
+{
+    int p = 0;
+    while ((p = s.find(oldVal, p)) != string::npos) // string::npos返回字符串尾指示器
+    {
+        s.replace(p, oldVal.size(), newVal); // 将找到的子串替换为 newVal 的内容
+        p += newVal.size(); // 下标调整到新插入内容之后
+    }
+}
+
+int main()
+{
+    string s = "tho thru tho!";
+
+    replace_string(s, "thru", "through");
+    cout << s << endl; // "tho through tho!"
+
+    replace_string(s, "tho", "though");
+    cout << s << endl; // "though through though!"
+
+    replace_string(s, "through", "");
+    cout << s << endl; // "though  though!"
+
+    return 0;
+}
+```
+
+**练习9.45：编写函数，接受一个表示名字的 `string` 参数和两个分别表示前缀（如 "Mr." 或 "Ms."）和后缀（如 "Jr." 或 "III"）的字符串。使用迭代器及 `insert` 和 `append` 函数将前缀和后缀添加到给定的名字中，将生成的新 `string` 返回。**
+
+解答：通过 `insert` 插入到首位置之前，即可实现前缀插入。通过 `append` 即可实现将后缀追加到字符串末尾。
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+
+void name_string(string& name, const string& prefix, const string& suffix)
+{
+    name.insert(name.begin(), 1, ' '); // 加空格
+    name.insert(name.begin(), prefix.begin(), prefix.end()); // 插入前缀
+    name.append(" ");
+    name.append(suffix.begin(), suffix.end());
+}
+
+int main()
+{
+    string name = "James Bond";
+    name_string(name, "Mr.", "II");
+    cout << name << endl; // Mr. James Bond II
+
+    name = "M";
+    name_string(name, "Mrs.", "III");
+    cout << name << endl; // Mrs. M III
+
+    return 0;
+}
+```
+
+**练习9.46：重写上一题的函数，这次使用位置和长度来管理 `string`，并只使用 `insert`。**
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+
+void name_string(string& name, const string& prefix, const string& suffix)
+{
+    /*  使用 isnert，0 等价于 begin()，都是在当前首字符之前插入新字符串；
+        size() 等价于 end()，都是在末尾追加新字符串。    */
+    name.insert(0, " ");
+    name.insert(0, prefix);             // 插入前缀
+    name.insert(name.size(), " ");
+    name.insert(name.size(), suffix);   // 插入后缀
+}
+
+int main()
+{
+    string name = "James Bond";
+    name_string(name, "Mr.", "II");
+    cout << name << endl; // Mr. James Bond II
+
+    name = "M";
+    name_string(name, "Mrs.", "III");
+    cout << name << endl; // Mrs. M III
+
+    return 0;
+}
+```
 
 ### 9.5.3 string搜索操作
 
