--- a/第9章 顺序容器.md
+++ b/第9章 顺序容器.md
@@ -51,9 +51,9 @@
         - [9.5.2 改变string的其他方法](#952-改变string的其他方法)
             - [`append`和`replace`函数](#append和replace函数)
             - [改变`string`的多种重载函数](#改变string的多种重载函数)
-        - [9.5.3 string搜索操作](#953-string搜索操作)
+        - [9.5.3 `string` 搜索操作](#953-string-搜索操作)
             - [指定在哪里开始搜索](#指定在哪里开始搜索)
-            - [逆向搜素](#逆向搜素)
+            - [逆向搜素 `rfind`](#逆向搜素-rfind)
         - [9.5.4 compare函数](#954-compare函数)
         - [9.5.5 数值转换](#955-数值转换)
     - [9.6 容器适配器 (adapter)](#96-容器适配器-adapter)
@@ -1913,15 +1913,375 @@ int main()
 }
 ```
 
-### 9.5.3 string搜索操作
+### 9.5.3 `string` 搜索操作
+
+`string` 类提供了 $6$ 个不同的搜索函数。每个搜索操作都返回一个 `string::size_type` 值，表示匹配发生位置的下标。
+
+如果搜索失败，则返回一个名为 `string::npos` 的 `static` 成员。标准库将 `npos` 定义为一个 `const string::size_type` 类型，并初始化为值 `-1`。
+
+由于 `npos` 是一个 `unsigned` 类型，此初值意味着 `npos` 等于任何 `string` 最大的可能大小。用一个 `int` 或其他带符号类型来保存这些函数的返回值不妥。
+
+- `find` 函数查找参数指定的字符串，若找到，则返回第一个匹配位置的下标，否则返回 `npos`：
+
+```cpp
+string name("AnnaBelle");
+auto pos1 = name.find("Anna"); // pos1 == 0
+```
+
+- 查找与给定字符串中任何一个字符匹配的位置。例如，下面代码定位 `name` 中的第一个数字：
+
+```cpp
+string numbers("0123456789"), name("r2d2");
+// 返回 1，即，name 中第一个数字的下标
+auto pos = name.find_first_of(numbers);
+```
+
+- 如果要搜索第一个不在参数中的字符，应该调用 `find_first_not_of`。例如，为了搜索一个 `string` 中第一个非数字字符，可以这样做：
+
+```cpp
+string dept("03714p3");
+// 返回 5 —— 字符 'p' 的下标
+auto pos = dept.find_first_not_of(numbers);
+```
+
+
+| 表9.14：`string`搜索操作                                  |                                                              |
+| --------------------------------------------------------- | ------------------------------------------------------------ |
+| 搜索操作返回指定字符出现的下标，如果未找到则返回 `npos`。 |                                                              |
+| `s.find(args)`                                            | 查找 `s` 中 `args` 第一次出现的位置                          |
+| `s.rfind(args)`                                           | 查找 `s` 中 `args` 最后一次出现的位置                        |
+| `s.find_first_of(args)`                                   | 在 `s` 中查找 `args` 中任何一个字符第一次出现的位置。        |
+| `s.find_last_of(args)`                                    | 在 `s` 中查找 `args` 中任何一个字符最后一次出现的位置        |
+| `s.find_first_not_of(args)`                               | 在 `s` 中查找第一个不在 `args` 中的字符                      |
+| `s.find_last_not_of(args)`                                | 在 `s` 中查找最后一个不在 `args` 中的字符                    |
+| **args 必须是以下形式之一**                               |                                                              |
+| `c, pos`                                                  | 从 `s` 中位置 `pos` 开始查找字符 `c`。`pos` 默认为 `0`       |
+| `s2, pos`                                                 | 从 `s` 中位置 `pos` 开始查找字符串 `s2`。`pos` 默认为 `0`    |
+| `cp, pos`                                                 | 从 `s` 中位置 `pos` 开始查找指针 `cp` 指向的以空字符结尾的 C风格字符串。`pos` 默认为 `0` |
+| `cp, pos, n`                                              | 从 `s` 中位置 `pos` 开始查找指针 `cp` 指向的数组的前 `n` 个字符。`pos` 和 `n` 无默认值 |
 
 #### 指定在哪里开始搜索
 
-#### 逆向搜素
+我们可以传递给 `find` 操作一个可选的开始位置。这个可选的参数指出从哪个位置开始进行搜索。默认情况下，此位置被置为 `0`。一种常见的程序设计模式是用这个可选参数在子字符串中循环地搜索子字符串出现的所有位置：
+
+```cpp
+string::size_type pos = 0;
+// 每步循环查找 name 中下一个数
+while ((pos = name.find_first_of(numbers, pos)) != string::npos) {
+    cout << "found number at index: " << pos << " element is " << name[pos] << endl;
+    ++pos; // 移动到下一个字符
+}
+```
+
+#### 逆向搜素 `rfind`
+
+`rfind` 成员函数搜索最后一个匹配，即字符串中最靠右的出现位置：
+
+```cpp
+string river("Mississippi");
+auto first_pos = river.find("is"); // 返回 1
+auto last_pos = river.rfind("is"); // 返回 4
+```
+
+- `find_last_of` 搜索与给定 `string` 中任何一个字符匹配的最后一个字符。
+- `find_last_not_of` 搜索最后一个不出现在给定 `string` 中的字符。
+
+**练习9.47：编写程序，首先查找 `string` "ab2c3d7R4E6" 中的每个数字字符，然后查找其中每个字母字符。编写两个版本的程序，第一个要使用 `find_first_of`，第二个要使用 `find_first_not_of`。**
+
+```cpp
+#include <cstdio>
+#include <iostream>
+#include <string>
+
+using namespace std;
+
+void find_char(string& s, const string& chars)
+{
+    printf("In string s: %s found element: %s\n", s.c_str(), chars.c_str());
+
+    string::size_type pos = 0;
+    while ((pos = s.find_first_of(chars, pos)) != string::npos)
+    {
+        cout << "pos: " << pos << ", char: " << s[pos] << endl;
+        pos++;
+    }
+}
+
+int main()
+{
+    string s = "ab2c3d7R4E6";
+
+    cout << "Found all the digits" << endl;
+    find_char(s, "0123456789");
+    
+    cout << endl << "Found all the letters" << endl;
+    find_char(s, "abcdefghijklmnopqrstuvwxyz"\
+    "ABCDEFGHIJKLMNOPQRSTUVWXYZ");
+
+    return 0;
+}
+/*
+Found all the digits
+In string s: ab2c3d7R4E6 found element: 0123456789
+pos: 2, char: 2
+pos: 4, char: 3
+pos: 6, char: 7
+pos: 8, char: 4
+pos: 10, char: 6
+
+Found all the letters
+In string s: ab2c3d7R4E6 found element: abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
+pos: 0, char: a
+pos: 1, char: b
+pos: 3, char: c
+pos: 5, char: d
+pos: 7, char: R
+pos: 9, char: E
+*/
+```
+
+```cpp
+#include <cstdio>
+#include <iostream>
+#include <string>
+
+using namespace std;
+
+void find_not_char(string& s, const string& chars)
+{
+    printf("In string s: %s not found element: %s\n", s.c_str(), chars.c_str());
+
+    string::size_type pos = 0;
+    while ((pos = s.find_first_not_of(chars, pos)) != string::npos)
+    {
+        cout << "pos: " << pos << ", char: " << s[pos] << endl;
+        pos++;
+    }
+}
+
+int main()
+{
+    string s = "ab2c3d7R4E6";
+
+    cout << "Found all the digits" << endl;
+    find_not_char(s, "abcdefghijklmnopqrstuvwxyz"\
+    "ABCDEFGHIJKLMNOPQRSTUVWXYZ");
+    
+    cout << endl << "Found all the letters" << endl;
+    find_not_char(s, "0123456789");
+
+
+    return 0;
+}
+/*
+Found all the digits
+In string s: ab2c3d7R4E6 not found element: abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
+pos: 2, char: 2
+pos: 4, char: 3
+pos: 6, char: 7
+pos: 8, char: 4
+pos: 10, char: 6
+
+Found all the letters
+In string s: ab2c3d7R4E6 not found element: 0123456789
+pos: 0, char: a
+pos: 1, char: b
+pos: 3, char: c
+pos: 5, char: d
+pos: 7, char: R
+pos: 9, char: E
+*/
+```
+
+**练习9.48：假定 `name` 和 `numbers` 的定义如 325 页所示，`numbers.find(name)` 返回什么？**
+
+P325：查找与给定字符串中任何一个字符匹配的位置。例如：下面代码定位 `name` 中的第一个数字：
+
+```cpp
+string numbers("0123456789"), name("r2d2");
+// 返回 1，即，name 中第一个数字的下标
+auto pos = name.find_first_of(numbers);
+```
+
+```cpp
+#include <cstdio>
+#include <iostream>
+#include <string>
+
+using namespace std;
+
+int main()
+{
+    string name = "r2d2", numbers = "0123456789";
+    
+    printf("In string s: \"%s\" to find elment: \"%s\"\n", name.c_str(), numbers.c_str());
+
+    string::size_type pos = 0;
+    while ((pos = name.find_first_of(numbers, pos)) != string::npos)
+    {
+        cout << "pos: " << pos << ", numbers: " << name[pos] << endl;
+        pos++;
+    }
+
+    return 0;
+}
+
+/*
+In string s: "r2d2" to find elment: "0123456789"
+pos: 1, numbers: 2
+pos: 3, numbers: 2
+*/
+```
+
+**练习9.49：如果一个字母延伸到中线之上，如 `d` 或 `f`，则称其有上出头部分 (ascender)。如果一个字母延伸到中线之下，如 `p` 或 `g`，则称其有下出头部分 (descender)。编写程序，读入一个单词文件，输出最长的既不包含上出头部分，也不包含下出头部分的单词。**
+
+解答：查找既不包含上出头字母，也不包含下出头字母的单词，等价于“排除包含上出头字母或下出头字母的单词”。因此，用 `find_first_of` 在单词中查找上出头字母或下出头字母是否出现。
+
+- 若出现（返回一个合法位置，而非 `npos`），则丢弃此单词，继续检查下一个单词。
+- 否则，表明单词符合要求，检查它是否比之前的最长合法单词更长，若是，记录其长度和内容。
+- 文件读取完毕后，输出最长的合乎要求的单词。
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <string>
+
+using namespace std;
+
+void find_longest_word(ifstream &in)
+{
+    string s, longest_word;
+    int max_length = 0;
+
+    while (in >> s) {
+        if (s.find_first_of("bdfghjklpqty") != string::npos)  continue; // 重要
+        cout << s << " ";
+        if (max_length < s.size()) { // 新单词更长
+            max_length = s.size(); // 记录长度和单词
+            longest_word = s;
+        }
+    }
+    cout << endl << "Longest string is: " << longest_word << endl;
+}
+
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cerr << "Can't open the input file" << endl;
+        return -1;
+    }
+
+    find_longest_word(in);
+
+    return 0;
+}
+```
 
 ### 9.5.4 compare函数
 
+标准库 string 类型提供了一组 `compare` 函数，这些函数与 C标准库的 `strcmp` 函数很相似，类似 `strcmp`，根据 `s` 是等于、大于还是小于参数指定的字符串，`s.compare` 返回 `0`、正数或负数。
+
+| 表9.15：                            | `s.compare()`的几种参数形式                                  |
+| ----------------------------------- | ------------------------------------------------------------ |
+| `s.compare(s2)`                     | 比较 `s` 和 `s2`                                             |
+| `s.compare(pos1, n1, s2)`           | 将 `s` 中从 `pos1` 开始的 `n1` 个字符与 `s2` 进行比较        |
+| `s.compare(pos1, n1, s2, pos2, n2)` | 将 `s` 中从 `pos1` 开始的 `n1` 个字符与 `s2` 中从 `pos2` 开始的 `n2` 个字符进行比较 |
+| `s.compare(cp)`                     | 比较 `s` 与 `cp` 指向的以空字符结尾的字符数组                |
+| `s.compare(pos1, n1, cp)`           | 将 `s` 中从 `pos1` 开始的 `n1` 个字符与 `cp` 指向的以空字符结尾的字符数组进行比较 |
+| `s.compare(pos1, n1, cp, n2)`       | 将 `s` 中从 `pos1` 开始的 `n1` 个字符与 `cp` 指向的地址开始的 `n2` 个字符进行比较 |
+
 ### 9.5.5 数值转换
+
+- `string s = to_string(i)` // 将整数 `i` 转换为字符表示形式
+- `double d = stod(s)` // 将字符串 `s` 转换为浮点数
+
+**表9.16：`string`和数值之间的转换**
+
+```cpp
+to_string(val)
+// 一组重载函数，返回值 val 的 string 表示。val 可以是任何算术类型。
+// 对每个浮点类型和 int 或更大的整型，都有相应版本的 to_string。
+// 与往常一样，小整型会被提升。
+
+stoi(s, p, b)
+stol(s, p, b)
+stoul(s, p, b)
+stoll(s, p, b)
+stoull(s, p, b)
+// 返回 s 的起始子串（表示整数内容）的数值，
+// 返回值类型分别是 int、long、unsigned long、long long、unsigned long long。
+// b 表示转换所用的基数，默认值为 10.
+// p 是 size_t 指针，用来保存 s 中第一个非数值字符的下标，p 默认为 0，即，函数不保存下标
+
+stof(s, p)
+stod(s, p)
+stold(s, p)
+// 返回 s 的起始子串（表示浮点数内容）的数值，返回值类型分别是 float、double 或 long double。
+// 参数 p 的作用与整数转换函数中一样。
+```
+
+- `string` 参数中第一个非空白符必须是符号（`+`或`-`）或数字。
+- 它可以以 `0x` 或 `0X` 开头来表示十六进制数。
+- 对那些将字符串转换为浮点值的函数，`string` 函数参数也可以以小数点 `.` 开头，并可以包含 `e` 或 `E` 来表示指数部分。
+- 对于那些将字符串转换为整型值的函数，根据基数不同，`string` 参数可以包含字母字符，对应大于数字 `9` 的数。
+- 当给定的字符串不能转换为数值时（不是所需类型数值的合法表示），这些转换函数会抛出 `invalid_argument` 异常；
+- 如果表示的值超出类型所能表达的范围，则抛出一个 `out_of_range` 异常。
+
+**练习9.50：编写程序处理一个 `vector<string>`，其元素都表示整型值。计算 `vector` 中所有元素之和。修改程序，使之计算表示浮点值的 `string` 之和。**
+
+**整型值：**
+
+```cpp
+#include <iostream>
+#include <string>
+#include <vector>
+
+using namespace std;
+
+int main()
+{
+    vector<string> vs = {"123", "+456", "-789"};
+    int sum = 0;
+
+    for (auto iter = vs.begin(); iter != vs.end(); iter++)
+        sum += stoi(*iter);
+
+    cout << "The sum is: " << sum << endl;
+    return 0;
+
+    // The sum is: -210
+}
+```
+
+**浮点值：**
+
+```cpp
+#include <iostream>
+#include <string>
+#include <vector>
+
+using namespace std;
+
+int main()
+{
+    vector<string> vs = {"12.3", "-4.56", "+7.8e-2"};
+    float sum = 0;
+
+    for (auto iter = vs.begin(); iter != vs.end(); iter++)
+        sum += stof(*iter);
+    
+    cout << "The sum is: " << sum << endl;
+    return 0;
+    
+    // The sum is: 7.818
+}
+```
+
+**练习9.51：设计一个类，它有三个 `unsigned` 成员，分别表示年、月和日。为其编写构造函数，接受一个表示日期的 `string` 参数。你的构造函数应该能处理不同数据格式，如 `January 1, 1900`、`1/1/1990`、`Jan 1 1900` 等。**
+
+（未完待续）巨复杂 书 P328 练习册P227
 
 ## 9.6 容器适配器 (adapter)
 
@@ -2025,3 +2385,7 @@ intStack.push(ix);  // intStack 保存 0 到 9 十个数
 
 `priority_queue`允许我们为队列中的元素建立优先级。新加入的元素会排在所有优先级比它低的已有元素之前。
 饭店按照客人预定时间而不是到来时间的早晚来为他们安排座位，就是一个优先队列的例子。默认清况下，标准库在元素类型上使用`<`运算符来确定相对优先级。
+
+**练习9.52：使用 `stack`处理括号化的表达式。当你看到一个左括号，将其记录下来。当你在一个左括号之后看到一个右括号，从 `stack` 中 `pop` 对象，直至遇到括号，将左括号也一起弹出栈。然后将一个值（括号内的运算结果） `push` 到栈中， 表示一个括号化的（子）表达式已经处理完毕，被其运算结果所替代。**
+
+未完待续，书P331，练习册P230，巨复杂
